--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "private": true,
   "dependencies": {
-    "autoprefixer": "^9.4.2",
-    "elm": "^0.19.0-bugfix2",
-    "elm-analyse": "^0.16.0",
+    "autoprefixer": "9.7.1",
+    "elm": "0.19.1-3",
+    "elm-analyse": "0.16.5",
     "elm-format": "^0.8.1",
-    "parcel": "^1.12.3",
+    "parcel": "1.12.4",
     "parcel-bundler": "https://github.com/arowM/parcel/archive/parcel-bundler@1.12.4.tar.gz",
-    "postcss": "^7.0.6",
+    "postcss": "7.0.21",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-modules": "^1.4.1",
     "rimraf": "3.0.0",
-    "sass": "^1.15.2"
+    "sass": "1.23.3"
   },
   "scripts": {
     "start": "parcel src/index.html",
@@ -22,7 +22,7 @@
   "author": "Kadzuya Okamoto",
   "license": "MIT",
   "devDependencies": {
-    "elm-hot": "^1.0.1",
+    "elm-hot": "1.1.2",
     "node-elm-compiler": "5.0.4"
   }
 }
