--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "autoprefixer": "9.7.6",
     "elm": "0.19.1-3",
     "elm-analyse": "0.16.5",
+    "elm-doc-preview": "3.0.4",
     "elm-format": "^0.8.3",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.4",
@@ -14,6 +15,7 @@
     "sass": "1.26.3"
   },
   "scripts": {
+    "doc": "elm-doc-preview -p 8001",
     "start": "parcel src/index.html",
     "build": "rimraf docs/ && parcel build src/index.html -d docs/ --public-url /elm-app-template",
     "format": "elm-format src",
