--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
   "private": true,
   "dependencies": {
-    "autoprefixer": "9.7.6",
+    "autoprefixer": "9.8.6",
     "elm": "0.19.1-3",
     "elm-analyse": "0.16.5",
-    "elm-doc-preview": "3.0.4",
+    "elm-doc-preview": "5.0.3",
     "elm-format": "^0.8.3",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.4",
-    "postcss": "7.0.27",
-    "postcss-flexbugs-fixes": "^4.2.0",
-    "postcss-modules": "^1.5.0",
-    "rimraf": "3.0.2",
     "sass": "1.26.3"
+    "postcss": "7.0.32",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-modules": "^3.2.0",
+    "rimraf": "3.0.2"
   },
   "scripts": {
     "doc": "elm-doc-preview -p 8001",
     "start": "parcel src/index.html",
-    "build": "rimraf docs/ && parcel build src/index.html -d docs/ --public-url /elm-app-template",
+    "build": "rimraf dist/ && parcel build src/index.html dist/ --public-url /elm-app-template",
     "format": "elm-format src",
     "test": "elm-analyse && elm-format --validate src/"
   },
   "author": "Kadzuya Okamoto",
   "license": "MIT",
   "devDependencies": {
-    "elm-hot": "1.1.4",
-    "node-elm-compiler": "5.0.4"
+    "elm-hot": "1.1.5",
+    "node-elm-compiler": "5.0.4",
+    "sass": "^1.26.10"
   }
 }
