Add prettier for SCSS

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,10 @@
   "plugins": [
     "stylelint-scss"
   ],
-  "extends": "stylelint-config-standard",
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-prettier/recommended"
+  ],
   "rules": {
      "at-rule-no-unknown": null,
      "scss/at-rule-no-unknown": [
