--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "postcss": "7.0.32",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-modules": "^3.2.0",
+    "prettier": "^2.0.5",
     "rimraf": "3.0.2",
     "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0"
   },
   "scripts": {
     "doc": "elm-doc-preview -p 8001",
     "start": "parcel src/index.html",
     "build": "rimraf dist/ && parcel build src/index.html dist/ --public-url /elm-app-template",
-    "format": "elm-format src",
+    "format": "stylelint --fix src/style/ && elm-format src",
     "test": "stylelint src/style/ && elm-analyse && elm-format --validate src/"
   },
   "author": "Kadzuya Okamoto",
