--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "elm-doc-preview": "5.0.3",
     "elm-format": "^0.8.3",
     "parcel-bundler": "1.12.4",
-    "postcss": "7.0.32",
+    "postcss": "^7.0.32",
+    "postcss-100vh-fix": "^0.1.1",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-modules": "^3.2.0",
     "prettier": "^2.0.5",
