--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "elm": "0.19.1-3",
     "elm-analyse": "0.16.5",
     "elm-doc-preview": "5.0.3",
-    "elm-format": "^0.8.3",
+    "elm-format": "^0.8.4",
     "parcel-bundler": "1.12.4",
-    "postcss": "^7.0.32",
+    "postcss": "^7.0.35",
     "postcss-100vh-fix": "^0.1.1",
     "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-modules": "^3.2.0",
-    "prettier": "^2.0.5",
+    "postcss-modules": "^3.2.2",
+    "prettier": "^2.2.1",
     "rimraf": "3.0.2",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
@@ -22,14 +22,15 @@
   "scripts": {
     "doc": "elm-doc-preview -p 8001",
     "start": "parcel src/index.html",
-    "build": "rimraf dist/ && parcel build src/index.html dist/ --public-url /elm-app-template",
+    "build": "rimraf dist/ && parcel build src/index.html dist/ --no-source-maps --public-url /elm-app-template",
     "format": "stylelint --fix src/style/ && elm-format src",
     "test": "stylelint src/style/ && elm-analyse && elm-format --validate src/"
   },
   "author": "Kadzuya Okamoto",
   "license": "MIT",
   "devDependencies": {
-    "node": "^14.7.0",
-    "sass": "^1.26.10"
+    "node": "^14.15.1",
+    "node-elm-compiler": "^5.0.5",
+    "sass": "^1.30.0"
   }
 }
