--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,15 +4,9 @@
   ],
   "extends": [
     "stylelint-config-standard",
+    "stylelint-config-standard-scss",
     "stylelint-prettier/recommended"
   ],
   "rules": {
-     "at-rule-no-unknown": null,
-     "scss/at-rule-no-unknown": [
-       true,
-       {
-         "ignoreAtRules": ["use", "forward"]
-       }
-     ]
   }
 }
