--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
   "private": true,
   "dependencies": {
-    "autoprefixer": "9.8.6",
-    "elm": "0.19.1-3",
-    "elm-analyse": "0.16.5",
-    "elm-doc-preview": "5.0.3",
-    "elm-format": "^0.8.4",
-    "parcel-bundler": "1.12.4",
-    "postcss": "^8.2.10",
-    "postcss-100vh-fix": "^0.1.1",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-modules": "^3.2.2",
-    "prettier": "^2.2.1",
-    "rimraf": "3.0.2",
-    "stylelint": "^13.8.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.18.0"
+    "autoprefixer": "^10.4.2",
+    "elm": "^0.19.1-5",
+    "elm-doc-preview": "^5.0.5",
+    "elm-format": "^0.8.5",
+    "elm-review": "^2.7.0",
+    "elm-test": "^0.19.1-revision7",
+    "elm-verify-examples": "^5.0.0",
+    "parcel": "^2.3.2",
+    "postcss": "^8.4.7",
+    "postcss-100vh-fix": "^1.0.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "stylelint": "^14.5.3",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.1.0"
   },
   "scripts": {
-    "doc": "elm-doc-preview -p 8001",
-    "start": "parcel src/index.html",
-    "build": "rimraf dist/ && parcel build src/index.html dist/ --no-source-maps --public-url /elm-app-template",
+    "doc": "elm-doc-preview -p 8091",
+    "start": "parcel serve src/index.html --public-url /elm-app-template -p 8092",
+    "build": "rimraf dist/ && parcel build src/index.html --no-source-maps --dist-dir dist/ --public-url /elm-app-template",
     "format": "stylelint --fix src/style/ && elm-format src",
-    "test": "stylelint src/style/ && elm-analyse && elm-format --validate src/"
+    "review": "elm-review --fix",
+    "test": "stylelint src/style/ && elm-review && elm-format --validate src/ && npx elm make --output=/dev/null src/Main.elm # && elm-doc-preview --output /dev/null && elm-test && elm-verify-examples -r"
   },
   "author": "Kadzuya Okamoto",
   "license": "MIT",
   "devDependencies": {
-    "node": "^14.15.1",
-    "node-elm-compiler": "^5.0.5",
-    "sass": "^1.30.0"
+    "@parcel/transformer-elm": "^2.3.2",
+    "@parcel/transformer-sass": "^2.3.2",
+    "stylelint-config-standard-scss": "^3.0.0"
   }
 }
